# SYSC-2006

./: CMakeLists.txt
assignment 2/: a2_data_structures.h  a2_functions.c  a2_functions.h  main.c  main_tests.c  sample_project.txt  sample_test.txt
lab10/: singly_linked_list.c
lab11/: sl_list.c
lab12/: circular_queue.c  circular_queue.h
lab13/: dictionary.c  dictionary.h  main.c
lab8/: array_list.c  main.c  my_string.c  my_string.h
lab9/: lab9  polynomial.c
